plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.notfound'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // MapStruct 관련
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation  'org.springframework.boot:spring-boot-starter-validation' // notNull, notEmpty 등의 어노테이션 활용 위해 추가
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // suitable driver class 자체 탐색 위한 psql 드라이버 추가
    implementation 'org.postgresql:postgresql:42.6.0'

    // 위키 리비전 별 diff 기능 대리위한 외부 라이브러리
    implementation 'org.bitbucket.cowwoc:diff-match-patch:1.2'

    // swagger 의존성 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // S3 활용 목적 의존성 추가
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'


    // QueryDSL 라이브러리 추가
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // 웹소켓 통신 구현을 위한 라이브러리 추가
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework:spring-messaging'


    // elastic search
    implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch")

    // 위키 문법 json을 서버에서 검증 및 강제하기위한 '스키마'를 관리하는 목적의 라이브러리
    implementation("com.networknt:json-schema-validator:1.5.1") // 최신 사용
    implementation("com.fasterxml.jackson.core:jackson-databind")


    // logstash
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // 정제된 db 데이터 기입 위한 csv 참조 목적 라이브러리
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv"

}

def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
    main {
        java {
            srcDir querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            "-Aquerydsl.generatedAnnotationClass=javax.annotation.Generated"
    ]
}

tasks.register("cleanQuerydslDir", Delete) {
    delete querydslDir
}

tasks.named('test') {
    useJUnitPlatform()
}
